# raylight

./: .gitignore  MANIFEST.in  Makefile  README.md  TP_COMPILE_STATUS.md  __init__.py  debug_models.py  improvements.md  old_ray_worker.py  patch_dequant.py  patch_ops.py  patch_vram.py  pyproject.toml  requirements.txt  requirements_experimental.txt  restore_dequant.py  restore_dequant_v2.py  restore_uncommitted.py  setup.py  test_ggml_load.py  test_idx.py  test_param.py  test_speed.py  verify_fsdp.py
.roo/: mcp.json
benchmarks/: README_NCU.md  analyze_ncu_profile.py  bench_fp8_ncu.py  bench_fp8_vs_bf16.py  bench_fused_vs_dequant.py  bench_ltxav_block.py  roofline.py
csrc/alloc/: raylight_alloc.c
csrc/quantization/fp8_ampere/: fp8_ampere_gemm.cu
csrc/quantization/gguf/: gguf_kernel.cu  mmq.cuh
example_workflows/: IDLora_Raylight.json
src/raylight/: config.py  nodes.py  nodes_debug.py  raylight_types.py  types.py
src/raylight/comfy_dist/: fsdp_registry.py  fsdp_utils.py  lora.py  model_patcher.py  sd.py  tp_registry.py  utils.py
src/raylight/comfy_dist/weight_adapter/: base.py  boft.py  glora.py  lora.py  oft.py
src/raylight/comfy_extra_dist/: idlora_patches.py  nodes_cachedit.py  nodes_custom_sampler.py  nodes_dit_fast_attn.py  nodes_easycache.py  nodes_idlora.py  nodes_ltx_ffn_chunker.py  nodes_model_advanced.py  nodes_torch_compile.py  ray_patch_decorator.py
src/raylight/comfy_extra_dist/int8/: __init__.py  int8_distributed_ops.py  int8_fused_kernel.py  int8_quant.py  nodes_int8_loader.py  nodes_int8_lora.py
src/raylight/diffusion_models/chroma/: fsdp.py  xdit_context_parallel.py
src/raylight/diffusion_models/chroma_radiance/: fsdp.py
src/raylight/diffusion_models/cosmos/: xdit_context_parallel.py
src/raylight/diffusion_models/flux/: fsdp.py  tp_context_parallel.py  xdit_context_parallel.py
src/raylight/diffusion_models/hunyuan3d/: xdit_context_parallel.py
src/raylight/diffusion_models/hunyuan_video/: fsdp.py  xdit_context_parallel.py
src/raylight/diffusion_models/kandinsky5/: xdit_context_parallel.py
src/raylight/diffusion_models/lightricks/: OPTIMIZATIONS.md  fsdp.py  optimizations.py  tp.py  xdit_context_parallel.py
src/raylight/diffusion_models/lumina/: fsdp.py  tp.py  xdit_context_parallel.py
src/raylight/diffusion_models/qwen_image/: fsdp.py  tp.py  xdit_cfg_parallel.py  xdit_context_parallel.py
src/raylight/diffusion_models/wan/: fsdp.py  tp.py  xdit_context_parallel.py  xdit_context_parallel_animate.py
src/raylight/distributed_actor/: actor.py  actor_config.py  actor_pool.py  comm_test.py  loaded_model.py
src/raylight/distributed_actor/managers/: idlora_manager.py  lora_manager.py  sampler_manager.py  vae_manager.py
src/raylight/distributed_actor/model_context/: __init__.py  _base.py  bnb.py  fsdp.py  gguf.py  gguf_tp.py  lazy_tensor.py  tp.py  vae.py
src/raylight/distributed_modules/: attention.py  cfg.py  fsdp_shard_cache.py  fsdp_utils.py  kitchen_linear.py  kitchen_patch.py  lora_triton.py  pinned_cache.py  pinned_param_cache.py  quantize.py  sageattention_hf_patch.py  sequence_parallel.py  shared_pinned_param_cache.py  temporal_cache.py  tensor_parallel.py  tp_compress.py  tp_compress_triton.py  tp_linear_factory.py  usp.py  utils.py
src/raylight/distributed_modules/attention/: __init__.py  compact.py  dispatcher.py  interface.py  layer.py  registry.py  standard.py  xfuser_ring_patch.py
src/raylight/distributed_modules/compact/: attn_layer.py  compress_lowrank.py  compress_quantize.py  compress_topk.py  context.py  fastpath.py  main.py  ops.py  prof.py  ring.py  slowpath.py  stats.py  utils.py
src/raylight/distributed_modules/fp8_ampere/: __init__.py  fp8_ampere_linear.py  packing.py  tp_fp8_ampere_linear.py
src/raylight/distributed_modules/pinned_cache/: __init__.py  _base.py  _contiguous.py  _dict.py  _fsdp.py  _helpers.py  _pinned.py  _shared.py
src/raylight/distributed_worker/: model_context.py  ray_worker.py  worker_config.py
src/raylight/distributed_worker/managers/: idlora_manager.py  lora_manager.py  parallel_manager.py  sampler_manager.py  vae_manager.py
src/raylight/distributed_worker/model_context/: __init__.py  _base.py  bnb.py  fsdp.py  gguf.py  lazy_tensor.py  vae.py
src/raylight/expansion/comfyui_gguf/: dequant.py  fused_kernels.py  loader.py  nodes.py  ops.py
src/raylight/ipc/: __init__.py  backend.py  cleanup.py  errors.py  file_mmap.py  lifecycle.py  memory_stats.py  posix_shm.py  resolver.py  service.py  service_impl.py  types.py  vae_ipc.py
src/raylight/lib/: __init__.py  alloc_interceptor.py
src/raylight/utils/: cache.py  checksum.py  common.py  gguf.py  memory.py  profiler.py
tests/: conftest.py  instructions.md  repro_fsdp_fp8.py  test_config.py  test_dit_fast_attn.py  test_flex_compile.py  test_idlora_dist_alignment.py  test_kitchen_basic.py  test_kitchen_patch.py  test_ltxav_tp.py  test_lumina_tp.py  test_standard_attn.py  test_stats_collector.py  test_tensor_parallel.py  test_triton_compress.py
tests/comfy_extra_dist/: test_dit_fast_attn.py  test_idlora_dist_alignment.py
tests/config/: test_config.py
tests/diffusion_models/: test_lightricks_fsdp.py  test_ltxav_tp.py
tests/distributed_modules/: test_compact_quantization.py  test_flex_compile.py  test_fp8_ampere.py  test_fused_qk_norm.py  test_fused_residual.py  test_kitchen_basic.py  test_kitchen_patch.py  test_lumina_tp.py  test_qwen_image_tp.py  test_standard_attn.py  test_tensor_parallel.py  test_triton_compress.py  test_wan_tp.py
tests/expansion/: test_gguf_fused_kernels.py  test_gguf_lora_residual.py
tests/functional/: test_zigzag_functional.py
tests/raylight/: test_compact_quantization.py  test_lightricks_fsdp.py
(+31 files in other folders)
