[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raylight"
version = "0.16.0"
description = "Enable tensor split multi gpu capability in Comfy UI"
authors = [
  {name = "Micko Lesmana", email = "mickolesmana@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = []
dependencies = [
"ray>=2.48.0", "xfuser>=0.4.4"
]



[project.optional-dependencies]
dev = [
    "bump-my-version",
    "coverage",  # testing
    "mypy",  # linting
    "pre-commit", # runs linting on commit
    "pytest",  # testing
    "ruff",  # linting
]

[project.urls]
bugs = "https://github.com/komikndr/raylight/issues"
homepage = "https://github.com/komikndr/raylight"
Repository = "https://github.com/komikndr/raylight"


[tool.comfy]
PublisherId = "komikndr"
DisplayName = "raylight"
repository = "https://github.com/komikndr/raylight"
Icon = "https://github.com/komikndr/raylight/blob/main/icon.png?raw=true"


[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]

[tool.pyright]
#typeCheckingMode = "strict"
reportMissingImports = false

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.ruff]
line-length = 140
select = ["E", "F"]
ignore = [
  # Whitespace / indentation – let Black handle this
  "E101", "E111", "E114", "E117",
  "E201", "E202", "E203", "E211",
  "E221", "E222", "E225", "E231",
  "E241", "E251", "E261", "E262",
  "E265", "E266", "E271", "E272",
  "E273", "E274", "E275",
  "E301", "E302", "E303",
  "W191", "W293",
]

# Add rules to ban exec/eval
[tool.ruff.lint]
select = [
    "S102",  # exec-builtin
    "S307",  # eval-used
    "W293",
    "F",  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
    # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
