# =============================================================================
# pyproject.toml — Single source of truth for raylight metadata & tooling
# =============================================================================
[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raylight"
version = "0.16.0"
description = "Enable tensor split multi gpu capability in Comfy UI"
authors = [
    { name = "Micko Lesmana", email = "mickolesmana@gmail.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "ray>=2.48.0",
    "xfuser>=0.4.4",
    "kernels",
    "huggingface_hub",
    "hf_transfer",
    "fastsafetensors",
    "diffusers[torch]",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "coverage",
    "mypy",
    "ruff",
    "pre-commit",
    "bump-my-version",
]

[project.urls]
Homepage = "https://github.com/komikndr/raylight"
Repository = "https://github.com/komikndr/raylight"
Issues = "https://github.com/komikndr/raylight/issues"

# =============================================================================
# ComfyUI registry metadata (read by Comfy-Org/publish-node-action)
# =============================================================================
[tool.comfy]
PublisherId = "komikndr"
DisplayName = "raylight"
repository = "https://github.com/komikndr/raylight"
Icon = "https://github.com/komikndr/raylight/blob/main/icon.png?raw=true"

# =============================================================================
# Setuptools — src layout, include prebuilt native extensions in wheels
# =============================================================================
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"raylight.lib" = ["*.so"]
"raylight.expansion.comfyui_gguf" = ["*.so"]

# =============================================================================
# Testing
# =============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "gpu: requires CUDA GPU",
    "triton: requires Triton compiler",
    "slow: long-running tests",
]

# =============================================================================
# Type checking
# =============================================================================
[tool.pyright]
reportMissingImports = false

[tool.mypy]
files = "src"
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

# =============================================================================
# Linting / formatting
# =============================================================================
[tool.ruff]
line-length = 140
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "S102",  # exec-builtin
    "S307",  # eval-used
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
